# rgb-ldk-control-panel-public

./: .env  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GET-STARTED.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  components.json  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-regtest.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: RELEASE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/: README.md  macos-signing.md
docs/rfcs/0003-example/: contexts.json
e2e-tests/: package.json  pnpm-lock.yaml  wdio.conf.js
e2e-tests/helpers/: setup.js
e2e-tests/specs/: btc-l2-e2e.spec.js  rgb-e2e.spec.js
scripts/: bootstrap-local.sh  fund-local.sh  mine-local.sh  reset-local.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_dirs.rs  commands.rs  context_store.rs  error.rs  events_manager.rs  lib.rs  logger.rs  main.rs  rgbldkd_http.rs  util.rs  wallet.rs
src/app/: AppProviders.tsx  initLogging.ts  queryClient.ts  store.ts
src/app/components/: AcceptOnChainPaymentDialog.tsx  AppHeader.tsx  AppSidebar.tsx  AssetAvatar.tsx  AssetBalance.tsx  AssetExplorer.tsx  AssetSelect.tsx  Bolt12OfferDialog.tsx  Bolt12RefundDialog.tsx  ContentWrapper.tsx  (+26 more)
src/assets/: logo_dark.json
src/lib/: commands.ts  domain.ts  errorToText.ts  tauri.ts  utils.ts
(+133 files in other folders)
